--- a/itest/pom.xml
+++ b/itest/pom.xml
@@ -55,6 +55,9 @@
                                         <profile>owb1</profile>
                                     </profiles>
                                     <cloneProjectsTo>${project.build.directory}/equinox-owb1</cloneProjectsTo>
+                                    <pomExcludes>
+                                        <pomExclude>itest-jetty/pom.xml</pomExclude>
+                                    </pomExcludes>
                                 </configuration>
                             </execution>
                             <execution>
@@ -100,6 +103,9 @@
                                         <profile>owb1</profile>
                                     </profiles>
                                     <cloneProjectsTo>${project.build.directory}/felix-owb1</cloneProjectsTo>
+                                    <pomExcludes>
+                                        <pomExclude>itest-jetty/pom.xml</pomExclude>
+                                    </pomExcludes>
                                 </configuration>
                             </execution>
                             <execution>
