--- a/pax-cdi-samples/pax-cdi-sample4-jsf/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample4-jsf/pom.xml
@@ -64,7 +64,7 @@
                         <_wab>src/main/webapp/</_wab>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
-                        <Web-ContextPath>sample4</Web-ContextPath>
+                        <Web-ContextPath>/sample4</Web-ContextPath>
                         <Import-Package>
                             javax.annotation,
                             javax.servlet;version="[3.0,4.0)", 
