[PAXCDI-90] factored out pax-cdi-jetty-weld from pax-cdi-jetty

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <module>pax-cdi-fragment</module>
         <module>pax-cdi-jetty-osgi-boot</module>
         <module>pax-cdi-jetty</module>
+        <module>pax-cdi-jetty-weld</module>
     </modules>
 
     <profiles>
