[PAXCDI-94] Integration tests for OWB + Jetty

--- a/pax-cdi-jetty-openwebbeans/src/main/resources/META-INF/openwebbeans/wab.properties
+++ b/pax-cdi-jetty-openwebbeans/src/main/resources/META-INF/openwebbeans/wab.properties
@@ -86,10 +86,6 @@ org.apache.webbeans.application.useEJBInterceptorActivation=true
 org.apache.webbeans.fieldInjection.useOwbSpecificInjection=false
 ################################################################################################
 
-################################# Conversation Support #########################################
-org.apache.webbeans.application.supportsConversation=false
-################################################################################################
-
 ####################### Archive Centric Beans.xml Scanning #####################################
 # If true, will enable decorators, interceptors and alternatives based on the beans.xml
 # of the appropriate archive.
@@ -108,4 +104,18 @@ org.apache.webbeans.javassist.useClassLoaderProvider=false
 #
 # org.apache.webbeans.proxy.mapping.javax.enterprise.context.RequestScoped=org.apache.webbeans.intercept.NormalScopedBeanInterceptorHandler
 org.apache.webbeans.proxy.mapping.javax.enterprise.context.ApplicationScoped=org.apache.webbeans.intercept.ApplicationScopedBeanInterceptorHandler
+################################################################################################
+
+#################################### Conversation Context Removal Thread Delay##################
+#Converation contexts are removed when idle timeout > timeout. Default timeout is 30 mins.
+org.apache.webbeans.conversation.Conversation.periodicDelay=1800000
+################################################################################################
+
+################################### Default Conversation Service ############################### 
+#Default implementation of org.apache.webbeans.corespi.ConversationService.
+org.apache.webbeans.spi.ConversationService=org.apache.webbeans.jsf.DefaultConversationService
+################################################################################################
+
+################################# Conversation Support #########################################
+org.apache.webbeans.application.supportsConversation=true
 ################################################################################################
