--- a/itest/src/it/itest-jetty/pom.xml
+++ b/itest/src/it/itest-jetty/pom.xml
@@ -586,6 +586,13 @@
                 </dependency>
 
                 <dependency>
+                    <groupId>org.apache.openwebbeans</groupId>
+                    <artifactId>openwebbeans-jsf</artifactId>
+                    <version>${openwebbeans.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <dependency>
                     <groupId>org.apache.xbean</groupId>
                     <artifactId>xbean-asm4-shaded</artifactId>
                     <version>${xbean.version}</version>
