[PAXCDI-90] pax-cdi-jetty renamed to pax-cdi-servlet
(There are no more Jetty dependencies.)

--- a/pax-cdi-jetty-weld/pom.xml
+++ b/pax-cdi-jetty-weld/pom.xml
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>org.ops4j.pax.cdi</groupId>
-            <artifactId>pax-cdi-jetty</artifactId>
+            <artifactId>pax-cdi-servlet</artifactId>
             <version>${project.version}</version>
         </dependency>
 
