--- a/pax-cdi-servlet/pom.xml
+++ b/pax-cdi-servlet/pom.xml
@@ -6,7 +6,7 @@
     <version>0.8.0-SNAPSHOT</version>
     <relativePath>../pax-cdi-parent</relativePath>
   </parent>
-  <artifactId>pax-cdi-jetty</artifactId>
+  <artifactId>pax-cdi-servlet</artifactId>
   <packaging>bundle</packaging>
 
     <properties>
