--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <module>pax-cdi-test-support</module>
         <module>pax-cdi-fragment</module>
         <module>pax-cdi-jetty-osgi-boot</module>
-        <module>pax-cdi-jetty</module>
+        <module>pax-cdi-servlet</module>
         <module>pax-cdi-jetty-weld</module>
         <module>pax-cdi-jetty-openwebbeans</module>
     </modules>
