[PAXCDI-97] explicit servlet mapping *is* required for Jetty

--- a/pax-cdi-samples/pax-cdi-sample1-web/src/main/webapp/WEB-INF/web.xml
+++ b/pax-cdi-samples/pax-cdi-sample1-web/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,14 @@
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
     
+    <servlet>
+        <servlet-name>message</servlet-name>
+        <servlet-class>org.ops4j.pax.cdi.sample1.web.MessageServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>message</servlet-name>
+        <url-pattern>/message</url-pattern>
+    </servlet-mapping>
+
 </web-app>
