--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -16,7 +16,7 @@
         <deltaspike.version>1.0.0</deltaspike.version>
         <jersey.version>1.13</jersey.version>
         <logback.version>1.0.0</logback.version>
-        <openwebbeans.version>1.2.1</openwebbeans.version>
+        <openwebbeans.version>1.2.6</openwebbeans.version>
         <openjpa.version>2.2.0</openjpa.version>
         <ops4j.base.version>1.4.0</ops4j.base.version>
         <pax.exam.version>4.0.0</pax.exam.version>
@@ -224,11 +224,11 @@
 <!--                 <version>${xbean.version}</version> -->
 <!--             </dependency> -->
 
-<!--             <dependency> -->
-<!--                 <groupId>org.apache.xbean</groupId> -->
-<!--                 <artifactId>xbean-asm4-shaded</artifactId> -->
-<!--                 <version>${xbean.version}</version> -->
-<!--             </dependency> -->
+            <dependency>
+                <groupId>org.apache.xbean</groupId>
+                <artifactId>xbean-asm5-shaded</artifactId>
+                <version>${xbean.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.apache.openwebbeans</groupId>
