--- a/itest/src/it/itest-cdi10/pom.xml
+++ b/itest/src/it/itest-cdi10/pom.xml
@@ -91,7 +91,8 @@
 
         <dependency>
             <groupId>org.apache.xbean</groupId>
-            <artifactId>xbean-finder</artifactId>
+            <artifactId>xbean-finder-shaded</artifactId>
+            <version>3.18</version>
             <scope>provided</scope>
         </dependency>
 
@@ -421,7 +422,7 @@
 
                 <dependency>
                     <groupId>org.apache.xbean</groupId>
-                    <artifactId>xbean-asm4-shaded</artifactId>
+                    <artifactId>xbean-asm5-shaded</artifactId>
                     <version>${xbean.version}</version>
                     <scope>provided</scope>
                 </dependency>
