--- a/pax-cdi-web/pom.xml
+++ b/pax-cdi-web/pom.xml
@@ -64,6 +64,9 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+                        <Import-Package>
+                            org.ops4j.pax.web.*;version="[3.0,4.0)", *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
