--- a/pax-cdi-jetty-osgi-boot/pom.xml
+++ b/pax-cdi-jetty-osgi-boot/pom.xml
@@ -10,6 +10,8 @@
 
     <artifactId>pax-cdi-jetty-osgi-boot</artifactId>
     <packaging>bundle</packaging>
+    
+    <name>OPS4J Pax CDI Jetty Boot Bundle (patched)</name>
 
     <properties>
         <jetty.version>9.1.5.v20140505</jetty.version>
