[PAXCDI-97] exclude third-party sources from Checkstyle checks

--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -339,6 +339,7 @@
                     </executions>
                     <configuration>
                         <configLocation>checkstyle/pax-cdi-checks.xml</configLocation>
+                        <includes>org/ops4j/pax/cdi/**/*.java</includes>
                     </configuration>
                     <dependencies>
                         <dependency>
