--- a/pax-cdi-spi/pom.xml
+++ b/pax-cdi-spi/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.ops4j.pax.cdi</groupId>
-        <version>0.8.0</version>
+        <version>0.9.0-SNAPSHOT</version>
         <artifactId>pax-cdi-parent</artifactId>
         <relativePath>../pax-cdi-parent</relativePath>
     </parent>
