--- a/itest/src/it/itest-jetty/pom.xml
+++ b/itest/src/it/itest-jetty/pom.xml
@@ -14,6 +14,7 @@
     <name>OPS4J Pax CDI Jetty Integration Tests</name>
 
     <properties>
+        <asm.version>5.0.2</asm.version>
         <jetty.version>9.1.5.v20140505</jetty.version>
     </properties>
 
@@ -221,7 +222,6 @@
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-jta_1.1_spec</artifactId>
-            <version>1.1.1</version>
             <scope>test</scope>
         </dependency>
 
@@ -234,7 +234,6 @@
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-all</artifactId>
-            <version>5.0.2</version>
         </dependency>
 
         <!-- Jetty Deps -->
