--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -24,7 +24,7 @@
         <pax.jpa.version>0.2.0</pax.jpa.version>
         <pax.swissbox.version>1.7.1</pax.swissbox.version>
         <pax.url.version>2.1.0</pax.url.version>
-        <pax.web.version>4.0.0-SNAPSHOT</pax.web.version>
+        <pax.web.version>4.0.0</pax.web.version>
         <slf4j.version>1.6.4</slf4j.version>
         <weld.api.version>1.2.0.Beta1</weld.api.version>
         <weld.version>1.2.0.Beta1</weld.version>
