--- a/itest/pom.xml
+++ b/itest/pom.xml
@@ -24,7 +24,7 @@
             <id>matrix</id>
             <modules>
                 <module>src/it/itest-cdi10</module>
-                <module>src/it/itest-karaf</module>
+                <!--module>src/it/itest-karaf</module-->
                 <module>src/it/itest-jetty</module>
             </modules>
         </profile>
