--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.ops4j.pax</groupId>
@@ -204,24 +205,18 @@
                 <artifactId>xbean-finder</artifactId>
                 <version>${xbean.version}</version>
             </dependency>
-            
+
             <dependency>
-            	<groupId>org.apache.xbean</groupId>
-            	<artifactId>xbean-reflect</artifactId>
-            	<version>${xbean.version}</version>
+                <groupId>org.apache.xbean</groupId>
+                <artifactId>xbean-reflect</artifactId>
+                <version>${xbean.version}</version>
             </dependency>
 
-			<dependency>
-				<groupId>org.ow2.asm</groupId>
-				<artifactId>asm-all</artifactId>
-				<version>${asm.version}</version>
-			</dependency>
-
-<!--             <dependency> -->
-<!--                 <groupId>org.apache.xbean</groupId> -->
-<!--                 <artifactId>xbean-finder-shaded</artifactId> -->
-<!--                 <version>${xbean.version}</version> -->
-<!--             </dependency> -->
+            <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm-all</artifactId>
+                <version>${asm.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.apache.xbean</groupId>
@@ -320,7 +315,7 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>2.3.7</version>
+                    <version>2.5.3</version>
                     <extensions>true</extensions>
                     <configuration>
                         <instructions>
@@ -407,7 +402,7 @@
             <timezone>UTC+1</timezone>
         </developer>
     </developers>
-    
+
     <profiles>
         <profile>
             <id>apache-snapshots</id>
