[PAXCDI-118] set version on provided capability

--- a/pax-cdi-extender/pom.xml
+++ b/pax-cdi-extender/pom.xml
@@ -78,7 +78,7 @@
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Service-Component>OSGI-INF/*</Service-Component>
                         <Provide-Capability>
-                            osgi.extender; osgi.extender="pax.cdi"
+                            osgi.extender; osgi.extender="pax.cdi"; version:Version=${version;====;${replace;${project.version};-;.}}
                         </Provide-Capability>
                     </instructions>
                 </configuration>
