--- a/itest/src/it/itest-cdi10/pom.xml
+++ b/itest/src/it/itest-cdi10/pom.xml
@@ -12,6 +12,16 @@
     <artifactId>itest-cdi10</artifactId>
 
     <name>OPS4J Pax CDI 1.0 Integration Tests</name>
+    
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.osgi</groupId>
+                <artifactId>org.osgi.core</artifactId>
+                <version>5.0.0</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
 
@@ -424,7 +434,7 @@
                 <dependency>
                     <groupId>org.eclipse.tycho</groupId>
                     <artifactId>org.eclipse.osgi</artifactId>
-                    <version>3.10.0.v20140606-1445</version>
+                    <version>3.9.1.v20130814-1242</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
