--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -59,19 +59,19 @@
             <dependency>
                 <groupId>org.osgi</groupId>
                 <artifactId>org.osgi.core</artifactId>
-                <version>6.0.0</version>
+                <version>4.3.1</version>
             </dependency>
 
             <dependency>
                 <groupId>org.osgi</groupId>
                 <artifactId>org.osgi.compendium</artifactId>
-                <version>5.0.0</version>
+                <version>4.3.1</version>
             </dependency>
 
             <dependency>
                 <groupId>org.eclipse.tycho</groupId>
                 <artifactId>org.eclipse.osgi</artifactId>
-                <version>3.10.0.v20140606-1445</version>
+                <version>3.7.0.v20110613</version>
             </dependency>
 
             <dependency>
