--- a/itest/src/it/itest-osgi6/pom.xml
+++ b/itest/src/it/itest-osgi6/pom.xml
@@ -9,16 +9,16 @@
     </parent>
 
     <groupId>org.ops4j.pax.cdi.itest</groupId>
-    <artifactId>itest-cdi10</artifactId>
+    <artifactId>itest-osgi6</artifactId>
 
-    <name>OPS4J Pax CDI 1.0 Integration Tests</name>
-    
+    <name>OPS4J Pax CDI OSGi 6.0.0 Integration Tests</name>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.osgi</groupId>
                 <artifactId>org.osgi.core</artifactId>
-                <version>5.0.0</version>
+                <version>6.0.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -434,6 +434,7 @@
                 <dependency>
                     <groupId>org.eclipse.tycho</groupId>
                     <artifactId>org.eclipse.osgi</artifactId>
+                    <version>3.10.0.v20140606-1445</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
@@ -451,6 +452,16 @@
                     <scope>test</scope>
                 </dependency>
             </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>owb1</id>
