--- a/pax-cdi-samples/pom.xml
+++ b/pax-cdi-samples/pom.xml
@@ -23,6 +23,7 @@
         <module>pax-cdi-sample5</module>
         <module>pax-cdi-sample5-client1</module>
         <module>pax-cdi-sample5-client2</module>
+        <module>pax-cdi-sample6</module>
     </modules>
 
 </project>
