--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -22,7 +22,7 @@
         <ops4j.base.version>1.4.0</ops4j.base.version>
         <pax.exam.version>4.2.0</pax.exam.version>
         <pax.jdbc.version>0.3.0</pax.jdbc.version>
-        <pax.jpa.version>0.3.0-SNAPSHOT</pax.jpa.version>
+        <pax.jpa.version>0.3.0</pax.jpa.version>
         <pax.swissbox.version>1.7.1</pax.swissbox.version>
         <pax.url.version>2.1.0</pax.url.version>
         <pax.web.version>4.0.0</pax.web.version>
