--- a/itest/src/it/itest-karaf/pom.xml
+++ b/itest/src/it/itest-karaf/pom.xml
@@ -14,7 +14,7 @@
     <name>OPS4J Pax CDI 1.0 Integration Tests on Karaf</name>
 
     <properties>
-        <karaf.version>3.0.1</karaf.version>
+        <karaf.version>3.0.2</karaf.version>
     </properties>
 
     <dependencies>
@@ -265,6 +265,7 @@
                     <systemPropertyVariables>
                         <java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
                         <pax.cdi.provider>${pax.cdi.provider}</pax.cdi.provider>
+                        <pax.exam.karaf.version>${karaf.version}</pax.exam.karaf.version>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
