--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -20,7 +20,7 @@
         <openwebbeans.version>1.2.6</openwebbeans.version>
         <openjpa.version>2.2.0</openjpa.version>
         <ops4j.base.version>1.5.0</ops4j.base.version>
-        <pax.exam.version>4.2.0</pax.exam.version>
+        <pax.exam.version>4.3.0-SNAPSHOT</pax.exam.version>
         <pax.jdbc.version>0.3.0</pax.jdbc.version>
         <pax.jpa.version>0.3.0</pax.jpa.version>
         <pax.swissbox.version>1.8.0</pax.swissbox.version>
