--- a/pax-cdi-fragment/pax-cdi-fragment-ds-jpa/pom.xml
+++ b/pax-cdi-fragment/pax-cdi-fragment-ds-jpa/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.ops4j.pax.cdi</groupId>
     <artifactId>pax-cdi-fragment</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>0.9.0</version>
   </parent>
   <groupId>org.ops4j.pax.cdi.fragment</groupId>
   <artifactId>pax-cdi-fragment-ds-jpa</artifactId>
