--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -25,6 +25,7 @@
         <pax.swissbox.version>1.8.0</pax.swissbox.version>
         <pax.url.version>2.2.0</pax.url.version>
         <pax.web.version>4.0.0</pax.web.version>
+        <picketlink.version>2.7.0-SNAPSHOT</picketlink.version>
         <slf4j.version>1.6.4</slf4j.version>
         <weld.api.version>1.2.0.Beta1</weld.api.version>
         <weld.version>1.2.0.Beta1</weld.version>
